# fsprep

./: .gitignore  README.md  pyproject.toml
src/fsprep/: __init__.py  __main__.py  clean.py  core.py  normalize.py  prune.py  scan.py
tests/: test_cleaner.py  test_cli.py  test_features.py  test_normalizer.py
